--- a/lavatest.yaml
+++ b/lavatest.yaml
@@ -16,7 +16,7 @@ metadata:
 run:
   steps:
     - "mkdir build"
-    - "mount -t tmpfs -o size=2G build"
+    - "mount -t tmpfs -o size=2G tmpfs build"
     - "cd build"
     - "wget http://lava-leg02/~mwhudson/trusty-server-cloudimg-arm64-disk1.raw.img"
     - "dd if=trusty-server-cloudimg-arm64-disk1.raw.img of=/dev/sda bs=1M"
