--- a/lavatest.yaml
+++ b/lavatest.yaml
@@ -15,10 +15,11 @@ metadata:
 
 run:
   steps:
+    - "set -x"
     - "mkdir build"
     - "mount -t tmpfs -o size=2G tmpfs build"
     - "cd build"
-    - "wget --progress=dot -e dotbytes=2M http://lava-leg02/~mwhudson/trusty-server-cloudimg-arm64-disk1.raw.img"
+    - "wget --progress=do t-e dotbytes=2M http://lava-leg02/~mwhudson/trusty-server-cloudimg-arm64-disk1.raw.img"
     - "dd if=trusty-server-cloudimg-arm64-disk1.raw.img of=/dev/sda bs=1M"
     - "sync"
     - "fdisk -l /dev/sda"
