--- a/flash-kernel.yaml
+++ b/flash-kernel.yaml
@@ -27,3 +27,5 @@ run:
     - "cat /mnt/boot/boot.script"
     - "chroot /mnt bash -x /fk.sh"
     - "mv /mnt/etc/resolv.conf.bak /mnt/etc/resolv.conf"
+    - "mkdir -p /mnt/var/lib/cloud/seed/nocloud"
+    - "cp -a cloud-seed/* /mnt/var/lib/cloud/seed/nocloud/"
