try to skip a reboot

--- a/splat.yaml
+++ b/splat.yaml
@@ -17,8 +17,21 @@ run:
   steps:
     - "set -x"
     - "set +e"
-    - "#mkdir build"
-    - "#mount -t tmpfs -o size=2G tmpfs build"
-    - "#cd build"
+    - "partprobe -s"
     - "wget --progress=dot -e dotbytes=10M -O- http://lava-leg02/~mwhudson/trusty-server-cloudimg-arm64-disk1.raw.img | dd of=/dev/sda bs=1M"
     - "sync"
+    - "partprobe"
+    - "partprobe -s"
+    - "mount /dev/sda1 /mnt"
+    - "mv /mnt/etc/resolv.conf /mnt/etc/resolv.conf.bak"
+    - "cp /etc/resolv.conf /mnt/etc/resolv.conf"
+    - "mount -t proc procfs /mnt/proc"
+    - "cp fk.sh /mnt/fk.sh"
+    - "SDA1UUID=`ls /dev/disk/by-uuid`"
+    - "sed -e 's/@SDA1UUID@/'${SDA1UUID}'/' boot.script > /mnt/boot/boot.script"
+    - "cat /mnt/boot/boot.script"
+    - "chroot /mnt bash -x /fk.sh"
+    - "mv /mnt/etc/resolv.conf.bak /mnt/etc/resolv.conf"
+    - "mkdir -p /mnt/var/lib/cloud/seed/nocloud"
+    - "cp -a cloud-seed/* /mnt/var/lib/cloud/seed/nocloud/"
+
