--- a/splat.yaml
+++ b/splat.yaml
@@ -20,8 +20,7 @@ run:
     - "partprobe -s"
     - "wget --progress=dot -e dotbytes=10M -O- http://lava-leg02/~mwhudson/trusty-server-cloudimg-arm64-disk1.raw.img | dd of=/dev/sda bs=1M"
     - "sync"
-    - "partprobe"
-    - "partprobe -s"
+    - "echo 1 > /sys/class/block/sda/device/rescan"
     - "mount /dev/sda1 /mnt"
     - "mv /mnt/etc/resolv.conf /mnt/etc/resolv.conf.bak"
     - "cp /etc/resolv.conf /mnt/etc/resolv.conf"
