cannot use lava-test-shell :(

--- a/splat.yaml
+++ b/splat.yaml
@@ -16,8 +16,6 @@ metadata:
 run:
   steps:
     - "set -x"
-    - "set +e"
-    - "partprobe -s"
     - "wget --progress=dot -e dotbytes=10M -O- http://lava-leg02/~mwhudson/trusty-server-cloudimg-arm64-disk1.raw.img | dd of=/dev/sda bs=1M"
     - "sync"
     - "echo 1 > /sys/class/block/sda/device/rescan"
@@ -25,12 +23,14 @@ run:
     - "mv /mnt/etc/resolv.conf /mnt/etc/resolv.conf.bak"
     - "cp /etc/resolv.conf /mnt/etc/resolv.conf"
     - "mount -t proc procfs /mnt/proc"
-    - "cp fk.sh /mnt/fk.sh"
     - "SDA1UUID=`ls /dev/disk/by-uuid`"
     - "sed -e 's/@SDA1UUID@/'${SDA1UUID}'/' boot.script > /mnt/boot/boot.script"
     - "cat /mnt/boot/boot.script"
+    - "cp fk.sh /mnt/fk.sh"
     - "chroot /mnt bash -x /fk.sh"
     - "rm /mnt/fk.sh"
+    - "cp do-tempest.sh /mnt/bin/do-tempest.sh"
+    - "chmod a+x /mnt/bin/do-tempest.sh"
     - "mv /mnt/etc/resolv.conf.bak /mnt/etc/resolv.conf"
     - "mkdir -p /mnt/var/lib/cloud/seed/nocloud"
     - "cp -a cloud-seed/* /mnt/var/lib/cloud/seed/nocloud/"
