--- a/splat.yaml
+++ b/splat.yaml
@@ -34,6 +34,8 @@ run:
     - "mv /mnt/etc/resolv.conf.bak /mnt/etc/resolv.conf"
     - "mkdir -p /mnt/var/lib/cloud/seed/nocloud"
     - "cp -a cloud-seed/* /mnt/var/lib/cloud/seed/nocloud/"
+    - "cd"
+    - "sleep 1"
     - "umount /mnt"
     - "sync"
 
