--- a/splat.yaml
+++ b/splat.yaml
@@ -29,7 +29,7 @@ run:
     - "cp fk.sh /mnt/fk.sh"
     - "chroot /mnt bash -x /fk.sh"
     - "rm /mnt/fk.sh"
-    - "[ $PSCI_TEST == \"yes\" ] && { cp psci.sh /mnt/psci.sh; chroot /mnt bash -x /psci.sh; rm /mnt/psci.sh; }"
+    - "[ $PSCI_TEST == \"yes\" ] && { cp psci.sh /mnt/psci.sh; }"
     - "cp do-tempest.sh /mnt/bin/do-tempest.sh"
     - "chmod a+x /mnt/bin/do-tempest.sh"
     - "mv /mnt/etc/resolv.conf.bak /mnt/etc/resolv.conf"
