generize attachments, attach more stuff

--- a/attach-logs.yaml
+++ b/attach-logs.yaml
@@ -18,12 +18,8 @@ run:
     - "set -x"
     - "mount /dev/sda1 /mnt"
     - "set +e"
-    - "cd /mnt/home/ubuntu"
-    - "lava-test-run-attach tempest-logs.txt"
-    - "cd /mnt/opt/stack/log"
-    - "tar -czf ../log.tar.gz ."
-    - "cd .."
-    - "lava-test-run-attach log.tar.gz"
+    - "cd /mnt/home/ubuntu/attachments"
+    - "for f in *; do lava-test-run-attach $f; done"
     - "cd /mnt/opt/stack/tempest"
     - "tar -czf tr.tar.gz .testrepository"
     - "lava-test-run-attach tr.tar.gz"
