--- a/job.yaml
+++ b/job.yaml
@@ -88,7 +88,7 @@ actions:
     parameters:
       testdef_repos:
       - git-repo: 'http://github.com/mwhudson/lava-deploy-job'
-        testdef: attach-logs.yaml
+        testdef: process-results.yaml
       timeout: 900
 
   - command: submit_results
