plan vs reality etc

--- a/process-results.yaml
+++ b/process-results.yaml
@@ -23,4 +23,5 @@ run:
     - "cd /mnt/opt/stack/tempest"
     - "tar -czf tr.tar.gz .testrepository"
     - "lava-test-run-attach tr.tar.gz"
+    - "set +x"
     - "cat /mnt/home/ubuntu/attachments/results.txt | while read test result; do lava-test-case $test --result $result; done"
