--- a/splat.yaml
+++ b/splat.yaml
@@ -15,6 +15,9 @@ metadata:
 run:
   steps:
     - "set -x"
+    - "cat /etc/resolv.conf"
+    - "resolvconf -u"
+    - "cat /etc/resolv.conf"
     - "wget http://cloud-images.ubuntu.com/trusty/current/trusty-server-cloudimg-arm64-disk1.img"
     - "ls -l"
     - "qemu-img -p convert -O raw trusty-server-cloudimg-arm64-disk1.img trusty-server-cloudimg-arm64-disk1.raw.img"
