dear wget i do not want 6000 lines of dots

--- a/splat.yaml
+++ b/splat.yaml
@@ -18,9 +18,9 @@ run:
     - "cat /etc/resolv.conf"
     - "resolvconf -u"
     - "cat /etc/resolv.conf"
-    - "wget http://cloud-images.ubuntu.com/trusty/current/trusty-server-cloudimg-arm64-disk1.img"
+    - "wget --progress=dot -e dotbytes=10M http://cloud-images.ubuntu.com/trusty/current/trusty-server-cloudimg-arm64-disk1.img"
     - "ls -l"
-    - "qemu-img -p convert -O raw trusty-server-cloudimg-arm64-disk1.img trusty-server-cloudimg-arm64-disk1.raw.img"
+    - "qemu-img convert -p -O raw trusty-server-cloudimg-arm64-disk1.img trusty-server-cloudimg-arm64-disk1.raw.img"
     - "ls -l"
     - "dd if=trusty-server-cloudimg-arm64-disk1.raw.img of=/dev/sda bs=1M"
     - "sync"
