--- a/splat.yaml
+++ b/splat.yaml
@@ -19,11 +19,10 @@ run:
     - "resolvconf -u"
     - "cat /etc/resolv.conf"
     - "wget --progress=dot -e dotbytes=10M http://cloud-images.ubuntu.com/trusty/current/trusty-server-cloudimg-arm64-disk1.img"
-    - "ls -l"
-    - "qemu-img convert -p -O raw trusty-server-cloudimg-arm64-disk1.img trusty-server-cloudimg-arm64-disk1.raw.img"
-    - "ls -l"
-    - "dd if=trusty-server-cloudimg-arm64-disk1.raw.img of=/dev/sda bs=1M"
-    - "sync"
+    - "time qemu-img convert -p -O raw trusty-server-cloudimg-arm64-disk1.img trusty-server-cloudimg-arm64-disk1.raw.img"
+    - "time dd if=trusty-server-cloudimg-arm64-disk1.raw.img of=/dev/sda bs=1M"
+    - "rm trusty-server-cloudimg-arm64-disk1.raw.img trusty-server-cloudimg-arm64-disk1.img"
+    - "time sync"
     - "echo 1 > /sys/class/block/sda/device/rescan"
     - "mount /dev/sda1 /mnt"
     - "mkdir -p /mnt/opt/lava-scripts"
