set up hosts file in nfsroot (and hope ip address does not change)

--- a/splat.yaml
+++ b/splat.yaml
@@ -36,7 +36,7 @@ run:
     - "mkdir -p /mnt/var/lib/cloud/seed/nocloud-net"
     - "cp -a cloud-seed/* /mnt/var/lib/cloud/seed/nocloud-net/"
     - "mkdir /mnt/lava"
-    - "cp -a /lava-*/* /mnt/lava/"
+    - "./scripts/set-up-hosts-file.sh"
     - "sync"
     - "umount /mnt || true"
     - "sleep 5"
