back to being my own fault

--- a/scripts/environments.yaml
+++ b/scripts/environments.yaml
@@ -1,4 +1,6 @@
-manual:
-  type: manual
-  bootstrap-host: controller01
-  bootstrap-user: ubuntu
+default: manual
+environments:
+  manual:
+    type: manual
+    bootstrap-host: controller01
+    bootstrap-user: ubuntu
